fixed scrollbar stability on mobile, and updated missing href link in mobile nav message route

--- a/src/styles/cards/psthbnl.module.css
+++ b/src/styles/cards/psthbnl.module.css
@@ -111,6 +111,10 @@
     color: rgb(36, 158, 240);
     display: block;
     margin-left: auto;
+    margin-right: 0.5em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .expandText:hover {
