--- a/src/styles/genericscroller.module.css
+++ b/src/styles/genericscroller.module.css
@@ -7,6 +7,7 @@
   height: 100vh;
   overflow-y: auto;
   scrollbar-width: thin;
+  scrollbar-gutter: stable;
 }
 
 .doubleScroller {
@@ -25,6 +26,7 @@
   height: 100%;
   overflow-y: auto;
   scrollbar-width: thin;
+  scrollbar-gutter: stable;
 }
 
 .scrollbarMain::-webkit-scrollbar,
